# rapid_juicer

./: .gitignore  CMakeLists.txt  README.md  dlw.cpp  dlw.h  elements.cpp  elements.h  engine.cpp  engine.h  formats.cpp  formats.h  icons.rc  main.cpp  mw.cpp  mw.h  pw.cpp  pw.h  resources.qrc  saving.cpp  saving.h  session.cpp  session.h  settings.cpp  settings.h  task.cpp  task.h  tga_check.cpp  tga_check.h  version_info.rc  walker.cpp  walker.h  wave_codecs.cpp
gui/: logo.kra
